# MDownManager

./: .gitignore  LICENSE  README.md  README_COMPREHENSIVE.md  dyknow-progress-status.html  dyknow.config.json  dyknow.config.schema.json  package-lock.json  package.json  product-page.html  vercel.json  vite.config.ts
docs/: mdownmanager-architecture.html  mdownmanager-client.html  mdownmanager-investor.html  mdownmanager-whitepaper-v0.2.md
docs/dyknow/: architecture.md  feature-map.md  product-overview.md  setup-guide.md
docs/dyknow/.state/: audit-log.jsonl  repo-diff.json  update-proposals.json
docs/superpowers/plans/: 2026-06-14-help-system.md  2026-06-14-license-branding.md  2026-06-14-license-worker.md
docs/superpowers/specs/: 2026-06-14-freemium-nonprofit-help-design.md
scripts/: generate_license_keys.py  issue_license.py
site/: README.md  index.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/commands/: ai.rs  categories.rs  embeddings.rs  git.rs  help.rs  license.rs  mod.rs  scanner.rs  semantic.rs  vault.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/license/: mod.rs  types.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/vault/: indexer.rs  mod.rs  types.rs  watcher.rs
src/assets/: help.html
src/components/help/: TourOverlay.tsx  TourTooltip.tsx
src/components/layout/: FolderPanel.tsx  Shell.tsx  Sidebar.tsx  SplashScreen.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Toast.tsx
src/components/vault/: FileDetailPanel.tsx  FileTable.tsx  RiskBadge.tsx
src/hooks/: useResizable.ts  useTour.ts
src/lib/: help.ts  license.ts  licenseContext.tsx  tauri.ts  theme.tsx  treeBuilder.ts  utils.ts
src/pages/: CategoriesPage.tsx  ExplorerPage.tsx  HelpPage.tsx  ScannerPage.tsx  SettingsPage.tsx  VaultPage.tsx
workers/license-issuer/: package-lock.json  package.json  wrangler.toml
workers/license-issuer/src/: auth.ts  index.test.ts  index.ts  token.test.ts  token.ts  types.ts
